--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<title>Senthil Kumar Parthasarathy, SharePoint Developer</title>
 	</head>
 	<body>
